# Q4-Capstone

./: Procfile  README 3.md  README.md  db.sqlite3  populate_data 2.py  populate_data.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  (+6 more)
all_notifications/: urls.py  views.py
api/: .apps 2.py.icloud  .forms 2.py.icloud  .models 2.py.icloud  .urls 2.py.icloud  .views 2.py.icloud  forms.py  models 2.py  models.py  urls.py  views.py
community/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
config/: settings.py  urls.py  views.py
cynthia/: apps.py  views.py
faq/: forms.py  urls.py  views.py
faq_comment/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
faq_notification/: admin.py  apps.py  models.py  views.py
games/: forms.py  models.py  urls.py  views 2.py  views.py
message/: forms.py  models.py  urls.py  views.py
message_notification/: admin.py  models.py  views.py
review/: forms.py  models.py  urls.py  views.py
review_comment/: admin.py  forms.py  models.py  urls.py  views.py
review_notification/: apps.py  models.py  views.py
server/: pyproject.toml
templates/: 404.html  500.html  about_devs.html  api_all_games.html  api_homepage.html  base.html  community.html  create_game.html  db_games.html  faq.html  faq_detail.html  fitlered_review.html  game_detail.html  games.html  generic_form.html  homepage.html  index.html  messages.html  notifications.html  profile.html  review_detail.html  reviews.html  users.html  virtual_tour.html
(+69 files in other folders)
