[tool.poetry]
name = "q4-capstone"
version = "0.1.0"
description = ""
authors = ["Jacob-Short <thatmanjshort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
Pillow = "^8.3.2"
requests = "^2.26.0"
django-mptt = "^0.13.4"
secure-smtplib = "^0.1.1"
python-dotenv = "^0.19.1"
django-crispy-forms = "^1.13.0"
pyttsx3 = "^2.90"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
